# clinical-speech-understanding

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/skills/cut-to-the-chase/: SKILL.md
.agents/skills/okf-build/: SKILL.md
.agents/skills/okf-freshness/: SKILL.md
.agents/skills/okf-summary/: SKILL.md
.agents/skills/okf-validate/: NOTICE.upstream  SKILL.md
.agents/skills/okf-validate/scripts/: okf_validate.py
.agents/skills/okf-visualize/: SKILL.md
.agents/skills/okf-visualize/scripts/: okf_visualize.py
docs/: entity-metric-comparison.md  gpu-runbook.md
docs/reports/: medical-term-recall.md
docs/research/: 2026-07-06-medical-entity-asr-metrics.md
docs/superpowers/plans/: 2026-07-05-stt-benchmark-harness.md  2026-07-07-llm-entity-method.md
docs/superpowers/specs/: 2026-07-05-stt-benchmark-design.md  2026-07-09-diarization-cpwer-probe.md
docs/tutorials/: evaluation-workflow.md  wer-and-cpwer.html
knowledge/: index.md  log.md  status.md
knowledge/components/: cli.md  orchestration.md  transcript-cache.md
knowledge/datasets/: fareez-interviews.md  librispeech-test-other.md  meddialog-audio.md  primock57.md  record-model.md
knowledge/entity-methods/: bc5cdr.md  med7.md  medgemma.md  openrouter.md  stanza-i2b2.md
knowledge/findings/: medical-term-recall.md  speaker-attribution-cost.md
knowledge/metrics/: medical-term-recall.md  text-normalization.md  wer.md
knowledge/models/: assemblyai.md  deepgram.md  gpt-4o-transcribe.md  qwen3-asr.md  soniox.md  transcriber-protocol.md  whisper-local.md
knowledge/project/: architecture.md  environment.md  overview.md  research-plan.md
knowledge/runbooks/: evaluation-workflow.md  gpu-benchmark.md  setup.md
results/: entity_recall.csv  entity_recall.md  entity_recall_bc5cdr.csv  entity_recall_bc5cdr.md  entity_recall_dictionary.csv  entity_recall_dictionary.md  entity_recall_med7.csv  entity_recall_med7.md  entity_recall_medgemma.csv  entity_recall_medgemma.md  entity_recall_ner-union.csv  entity_recall_ner-union.md  entity_recall_stanza-i2b2.csv  entity_recall_stanza-i2b2.md  wer_per_file.csv  wer_summary.csv  wer_summary.md
results/diarize-probe/: README.md
results/diarize-probe/primock57/soniox-stt-async-v5/: day1_consultation01.json  day1_consultation06.json  day1_consultation07.json  day1_consultation08.json  day1_consultation10.json  day1_consultation12.json  day1_consultation13.json  day1_consultation14.json  day1_consultation15.json  day2_consultation01.json  day2_consultation02.json  day2_consultation03.json  day2_consultation05.json  day2_consultation06.json  day2_consultation10.json  day3_consultation04.json  day3_consultation06.json  day3_consultation07.json  day3_consultation08.json  day3_consultation10.json  day4_consultation01.json  day4_consultation03.json  day4_consultation05.json  day4_consultation06.json  day4_consultation07.json  day4_consultation08.json  day4_consultation09.json  day4_consultation10.json  day5_consultation01.json  day5_consultation02.json  day5_consultation03.json  day5_consultation04.json  day5_consultation07.json  day5_consultation08.json  day5_consultation09.json  day5_consultation10.json  day5_consultation11.json
results/diarize-probe/soniox-stt-async-v5/: day1_consultation02.json  day1_consultation03.json  day1_consultation04.json  day1_consultation05.json  day1_consultation09.json  day1_consultation11.json  day2_consultation04.json  day2_consultation07.json  day2_consultation08.json  day2_consultation09.json  day3_consultation01.json  day3_consultation02.json  day3_consultation03.json  day3_consultation05.json  day3_consultation09.json  day4_consultation02.json  day4_consultation04.json  day5_consultation05.json  day5_consultation06.json  day5_consultation12.json
results/entity_dictionaries/: medical_terms.txt
results/entity_manifests/: bc5cdr.json  dictionary.json  med7.json  medgemma.json  ner-union.json  stanza-i2b2.json
results/manifests/: meddialog_audio.json
results/transcripts/fareez-interviews/gpt-4o-transcribe-openrouter/: CAR0001.json  CAR0002.json  CAR0003.json  CAR0004.json  CAR0005.json  DER0001.json  GAS0001.json  GAS0002.json  GAS0003.json  GAS0004.json  GAS0005.json  GAS0007.json  GEN0001.json  MSK0001.json  MSK0003.json  MSK0004.json  MSK0005.json  MSK0006.json  MSK0007.json  MSK0008.json  MSK0009.json  MSK0010.json  MSK0011.json  MSK0012.json  MSK0013.json  MSK0014.json  MSK0015.json  MSK0016.json  MSK0017.json  MSK0018.json  MSK0019.json  MSK0020.json  MSK0021.json  MSK0022.json  MSK0023.json  MSK0024.json  MSK0025.json  MSK0026.json  MSK0027.json  MSK0028.json  (+232 more)
results/transcripts/fareez-interviews/qwen3-asr-0.6b/: CAR0001.json  CAR0002.json  CAR0003.json  CAR0004.json  CAR0005.json  (+267 more)
scripts/: diarize_probe.py  score_cpwer.py
src/stt_eval/: entity_llm.py  entity_score.py  metrics.py  normalize.py  records.py  run.py  runner.py  score.py  store.py
src/stt_eval/datasets/: __init__.py  fareez.py  librispeech.py  meddialog_audio.py  primock57.py
src/stt_eval/transcribers/: __init__.py  assemblyai_api.py  base.py  deepgram_api.py  openai_api.py  openrouter_api.py  qwen3_asr.py  soniox_api.py  whisper_local.py
tests/: conftest.py  test_api_transcribers.py  test_api_transcribers_polling.py  test_cli.py  test_datasets.py  test_entity_llm.py  test_entity_score.py  test_fareez.py  test_local_transcribers.py  test_meddialog.py  test_metrics.py  test_normalize.py  test_primock57.py  test_runner.py  test_score.py  test_store.py  test_transcribers_base.py
tests/fixtures/: mini_doctor.TextGrid  mini_patient.TextGrid
(+31665 files in other folders)
