[project]
name = "stt-eval"
version = "0.1.0"
description = "STT benchmark harness for clinical speech understanding"
requires-python = ">=3.10"
dependencies = [
    "jiwer>=3.0",
    "httpx>=0.27",
    "soundfile>=0.12",
    "textgrid>=1.6",
    "regex>=2024.4.16",
    "more-itertools>=10.0",
]

[project.optional-dependencies]
data = ["datasets[audio]>=3.0"]
# PIN AT EXECUTION (verified 2026-07-05): native Qwen3-ASR support landed in
# huggingface/transformers#43838 and first shipped in transformers v5.13.0
# (2026-07-03); no earlier release contains it. See
# https://huggingface.co/Qwen/Qwen3-ASR-1.7B-hf model card ("Transformers
# native" usage) and src/stt_eval/transcribers/qwen3_asr.py.
# torchcodec: transformers v5 decodes audio through it; declared here so the
# cu126 source pin below applies (the default PyPI wheel is a CUDA-13 build).
local = ["faster-whisper>=1.1", "transformers>=5.13", "torch>=2.4", "accelerate>=1.0", "torchcodec>=0.14"]
# entity-recall metric (stt-eval entity-score). scispaCy pins its own spacy
# range; the NER model wheel is installed separately (see load_scispacy_extractor).
entities = ["scispacy>=0.5"]

[project.scripts]
stt-eval = "stt_eval.run:main"

[dependency-groups]
dev = ["pytest>=8.0", "numpy>=1.26"]

# CUDA-12.6 torch wheels on Linux: default PyPI torch is cu13x, which needs
# driver >=580 and ships libs CTranslate2 (faster-whisper) can't use — CT2 is
# built against CUDA 12 (libcublas.so.12/libcudnn.so.9, provided by torch's
# nvidia-*-cu12 deps). cu126 runs on any driver >=525.
[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]
torchcodec = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
